--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@ title: Continuous Integration and Deployment service for Windows, Linux and macO
 <div class="customers-container">
     <div class="row">
         <div class="columns small-12">
-            <h2>Our great customers</h2>
+            <h2>Our Great Customers</h2>
         </div>
     </div>
 
@@ -80,13 +80,13 @@ title: Continuous Integration and Deployment service for Windows, Linux and macO
         <div class="columns medium-4 feature">
             <h3>40,000,000+</h3>
             <p>
-                Builds run
+                Builds Run
             </p>
         </div>
         <div class="columns medium-4 feature">
             <h3>2,500,000+</h3>
             <p>
-                Applications deployed
+                Applications Deployed
             </p>
         </div>
     </div>
